Context API implementation started.

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -21,6 +21,13 @@ header {
   left: 0;
 }
 
+.email {
+  position: absolute;
+  top: 30px;
+  right: 284px;
+  color: #6f6f6f;
+}
+
 .menu {
   position: absolute;
   top: 25px;
